--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "@angular/service-worker": "^5.2.9",
     "bootstrap": "^4.0.0-beta.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
