--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@angular/service-worker": "^5.2.9",
+    "@auth0/angular-jwt": "^1.1.0",
     "bootstrap": "^4.0.0-beta.3",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
