--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "ng2-cookies": "^1.0.12",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
