--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "ng2-cookies": "^1.0.12",
+    "npm": "^5.6.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -38,6 +39,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "angular-ide": "^0.9.41",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
